--- a/mathOlympiadV17/MathView-master/app/src/main/res/layout/activity_problem.xml
+++ b/mathOlympiadV17/MathView-master/app/src/main/res/layout/activity_problem.xml
@@ -17,9 +17,72 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         tools:context="com.nishant.mathsample.problemActivity">
+        <TextView
+            android:id="@+id/activityTitleId"
+            android:layout_marginTop="60dp"
+            android:layout_marginBottom="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="All Problems"
+            android:textColor="#D50101"
+            android:textStyle="bold"
+            android:textAlignment="center"
+            android:layout_gravity="center"
+            android:textSize="25sp"/>
+
+        <GridLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:columnCount="2">
+
+            <android.support.v7.widget.CardView
+                android:layout_gravity="start"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:padding="5dp"
+                app:cardElevation="8dp"
+                app:cardCornerRadius="8dp">
+
+
+
+
+            <TextView
+                android:textAlignment="center"
+                android:layout_gravity="center"
+                android:textColor="#1E88E5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="No. "
+                android:textStyle="bold"
+                android:textSize="20sp"/>
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_gravity="center"
+                android:layout_marginRight="60dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+               android:padding="5dp"
+                app:cardElevation="8dp"
+                app:cardCornerRadius="8dp">
+
+            <TextView
+                android:textAlignment="center"
+                android:layout_gravity="center"
+                android:textColor="#1E88E5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TITLE "
+                android:textStyle="bold"
+                android:textSize="20sp"/>
+
+            </android.support.v7.widget.CardView>
+
+        </GridLayout>
 
     <ListView
-        android:layout_marginTop="60dp"
         android:id="@+id/problemActivityListViewId"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
